test/types/bool/boolAcceptsQuery.good
boolAcceptsQuery.chpl:3: error: 'bool' is not generic, so does not accept query arguments
boolAcceptsQuery.chpl:7: error: 'bool' is not generic, so does not accept query arguments
boolAcceptsQuery.chpl:15: error: 'R' is not generic, so does not accept query arguments
